make test and enhanment code

--- a/.env
+++ b/.env
@@ -8,10 +8,14 @@ POSTGRES_PASSWORD=password
 POSTGRES_USER=admin
 POSTGRES_HOST=localhost
 DB_SYNCHRONIZE=true
-
+POSTGRES_DB_TEST=test_db
 
 
 JWT_ACCESS_TOKEN_SECRET=jwt_access_token_secret
 JWT_REFRESH_TOKEN_SECRET=jwt_refresh_token_secret
 JWT_ACCESS_TOKEN_EXPIRATION_TIME=1d
 JWT_REFRESH_TOKEN_EXPIRATION_TIME=1y
+
+REDIS_HOST:localhost
+REDIS_PORT:6379
+
