--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   postgres:
     image: 'postgres:latest'
@@ -16,3 +18,16 @@ services:
       - '6379:6379'
     volumes:
       - ${PWD}/data/redis:/data
+
+  advanced-bookstoreapi:
+    build:
+      context: .
+    container_name: 'advanced-bookstoreapi'
+    image: 'advanced-bookstoreapi:latest'  
+    ports:
+      - '3000:3000'
+    environment:
+      - .env
+    depends_on:
+      - postgres
+      - redis
