--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@nestjs/terminus": "^9.2.2",
     "@nestjs/typeorm": "^9.0.1",
     "axios": "^1.6.2",
-    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "bull": "^4.16.4",
     "cache-manager": "^5.7.6",
     "cache-manager-redis-store": "^3.0.1",
