--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ POSTGRES_DB=db_bookstore
 POSTGRES_PORT=5432
 POSTGRES_PASSWORD=password
 POSTGRES_USER=admin
-POSTGRES_HOST=localhost
+POSTGRES_HOST=postgres
 DB_SYNCHRONIZE=true
 
 
